[package]
name = "fpl_help"
version = "0.3.0"
edition = "2021"
authors = ["Hugo Berthet-Rambaud <hugoberthetrambaud@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
geo-types = "0.7.8"
arboard = "3.2.0"
geocoding = "0.4.0"


[profile.release]
opt-level = 2

